--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
       <h2>Bem-vindo à Trembolona Academy!</h2>
       <p>Seu espaço para treinar com dedicação, foco e disciplina.</p>
-      <img src="academia.jpg" alt="Foto da academia" width="100%">
+      <img src="academia.jpg" alt="Foto da academia"> width="100%">
     </section>
   </main>
 
